--- a/git.html
+++ b/git.html
@@ -8,21 +8,43 @@
 </head>
 <body>
     <script>
+       // 0.创建仓库
+        // (1.将尚未进行版本控制的本地目录转换为git仓库
+        // 在项目中右键打开Git Bash
+        // 执行git init命令转化为Git仓库（生成名为.git的隐藏目录 包含初始必要文件）
+        // (2.克隆仓库
+
+        // 1.全局配置
         // git config --global user.name "xxt"
         // git config --global user.email ""
         // --global 永久有效
         // --list 列表显示
         // git config --list --global 查找全局配置项
         // git config user.name
-        // git help<verb>打开帮助手册
+
+        // 2.git help<verb>打开帮助手册
         // git config -h
 
-        // 1.将尚未进行版本控制的本地目录转换为git仓库
-        // 在项目中右键打开Git Bash
-        // 执行git init命令转化为Git仓库（生成名为.git的隐藏目录 包含初始必要文件）
-        
+        // 3.工作区中文件的四种状态：
+        // 未跟踪（不被git管理的文件）
+        // 未修改 unmodified 与仓库中的一致 （git操作的终极结果 所有都是未修改状态）
+        // 已修改 modified 与仓库中的不一致
+        // 已暂存 staged 已保存到仓库中
+        // git status查看文件的状态 
+        // 未跟踪文件前面有红色的？？标记 
+        // 已跟踪的前面是绿色的A
+        // 已修改前面是红色的M
+        // git status -s(--short)精简显示文件报告
 
-        // 2.克隆仓库
+        // 4.跟踪新文件
+        // git add index.html
+        
+        // 5.提交更新
+        // git commit -m "新建了git.html文件"
+
+        // 6.对已提交的文件进行修改
+        // 7.暂停已修改的文件 
+        // 再次运行git add（跟踪新文件、已跟踪且已修改的文件放到暂存区、有冲突的标记为已解决）
     </script>
 </body>
 </html>
