--- a/git.html
+++ b/git.html
@@ -41,10 +41,13 @@
         
         // 5.提交更新
         // git commit -m "新建了git.html文件"
+        // git commit -m "提交消息"
 
         // 6.对已提交的文件进行修改
         // 7.暂停已修改的文件 
         // 再次运行git add（跟踪新文件、已跟踪且已修改的文件放到暂存区、有冲突的标记为已解决）
+
+    
     </script>
 </body>
 </html>
