--- a/git.html
+++ b/git.html
@@ -47,6 +47,9 @@
         // 7.暂停已修改的文件 
         // 再次运行git add（跟踪新文件、已跟踪且已修改的文件放到暂存区、有冲突的标记为已解决）
 
+        // 8.撤销对文件的修改 慎用 用git仓库中保存的文件覆盖工作区中指定的文件
+        
+
     
     </script>
 </body>
